<resources>
    <string name="app_name">vote</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="button"> Refer to guidelines </string>
    <string name="txt1">LOG IN </string>
    <string name="rollno"> User ID</string>
    <string name="rollhint">Roll no.</string>
    <string name="pass">Enter Password</string>
    <string name="pashint">password here</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="or">--(Or)--</string>
    <string name="reg">Registration Form</string>
    <string name="rep">Retype Your Password</string>
    <string name="submit">SUBMIT</string>
    <string name="mjcet">Muffakham Jah College Of Engg.  Tech.</string>
</resources>
