<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="@string/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:maxHeight="40dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_weight="0.05"
        android:paddingBottom="5dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/textView4"
        android:maxHeight="40dp"
        android:textSize="25sp"
        android:textAlignment="textStart"
        android:text="@string/rollno"
        android:layout_marginTop="7dp"
        android:layout_weight="0.14" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/rollnos"
        android:hint="@string/rollhint"
        android:fontFamily="cursive"
        android:background="#89CFF0"
        android:layout_weight="0.07"
        android:textAlignment="center"/>
    <Button
        android:text="@string/login"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginb"
        android:layoutDirection="ltr"
        android:layout_gravity="center" />
</LinearLayout>