<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ahmed.vote.signupage"
    android:weightSum="1"
    android:paddingLeft="13dp"
    android:paddingRight="13dp"
    android:background="#F0EAD6">

    <TextView
        android:text="@string/reg"
        android:maxHeight="40dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/textView"
        android:textSize="32sp"
        android:textAlignment="center"
        android:layout_weight="0.15"
        android:paddingBottom="10dp"
        android:paddingTop="5dp"
        android:textColor="#65000B"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:text="@string/rollno"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/textView3"
        android:maxHeight="40dp"
        android:textSize="27sp"
        android:background="#FAF0BE"
        android:layout_weight="0.16"
        android:paddingTop="15dp"
        android:textColor="#321414"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:hint="@string/rollhint"
        android:textAlignment="center"
        android:fontFamily="cursive"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_weight="0.12"
        android:background="#7FFFD4"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:text="@string/pass"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:maxHeight="40dp"
        android:id="@+id/textView5"
        android:paddingTop="15dp"
        android:textSize="27sp"
        android:layout_weight="0.05"
        android:textColor="#321414"
        tools:layout_editor_absoluteY="92dp"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="0.05"
        android:background="#7FFFD4"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/pashint"
        android:inputType="textPassword"
        android:maxHeight="40dp"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="165dp" />

    <TextView
        android:text="@string/rep"
        android:maxHeight="40dp"
        android:textSize="27sp"
        android:textColor="#321414"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/textView6"
        android:paddingTop="10dp"
        android:layout_weight="0.14"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:hint="@string/pashint"
        android:layout_width="359dp"
        android:layout_height="0dp"
        android:textAlignment="center"
        android:fontFamily="cursive"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText5"
        android:background="#7FFFD4"
        android:layout_weight="0.13"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layoutDirection="ltr"
        android:text="@string/submit"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="358dp" />

</LinearLayout>
